--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.8"
-      "mysql": ??
+      "express": "latest"
+    , "mysql": "latest"
     , "jade": ">= 0.0.1"
+    , "socket.io": "latest"
   }
 }
